<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewModel"
    type="com.example.assigmentdemo.viewmodels.UserViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".UserProfileFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            app:loadImage="@{viewModel.user_photo}"
            tools:src="@tools:sample/avatars" />
        <RadioButton
            android:text="@{viewModel.user_gender}"
            android:checked="true"
            android:minWidth="100dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/profile_gender_bg"
            android:button="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RadioButton>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/fName"
                android:text="@{viewModel.firstName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/lName"
                android:text="@{viewModel.LastName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/email"
                android:text="@{viewModel.Email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/mob"
                android:text="@{viewModel.mobile}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/pwd"
                android:text="@{viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Education"
                android:text="@{viewModel.user_edu}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/YOP"
                android:text="@{viewModel.user_yop}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/University"
                android:text="@{viewModel.user_university}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Grade"
                android:text="@{viewModel.user_grade}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Designation"
                android:text="@{viewModel.user_designation}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/YOE"
                android:text="@{viewModel.user_yoe}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Domain"
                android:text="@{viewModel.user_domain}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Address"
                android:text="@{viewModel.user_address}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Locality"
                android:text="@{viewModel.user_locality}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/Zip_Code"
                android:text="@{viewModel.user_zipcode}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/City"
                android:text="@{viewModel.user_city}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="none"
                android:hint="@string/State"
                android:text="@{viewModel.user_state}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</ScrollView>
</layout>