<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.assigmentdemo.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddressFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_location"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/black"
            app:helperText="@string/req"
            android:hint="@string/Address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_edit"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@={viewModel.Address}" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locality_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/Locality"
            app:helperText="@string/req"
            app:helperTextTextColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_location"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locality_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.Locality}"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zip_code_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:startIconDrawable="@drawable/ic_location"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/black"
            app:helperText="@string/req"
            android:hint="@string/Zip_Code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locality_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zipCode_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.Zip_Code}"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:maxLength="6"
                android:inputType="number"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:helperText="@string/req"
            app:startIconDrawable="@drawable/ic_location"
            app:helperTextTextColor="@color/black"
            android:hint="@string/City"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zip_code_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:inputType="text"
                android:text="@={viewModel.City}"
                android:imeOptions="actionDone"
                android:singleLine="true"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"

            android:id="@+id/state_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:helperTextTextColor="@color/black"
            app:helperText="@string/req"
            app:errorEnabled="true"
            android:hint="@string/State"
            app:startIconDrawable="@drawable/ic_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_textInputLayout">
            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@={viewModel.State}"
            />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Go"
            android:background="@drawable/gender_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_textInputLayout" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="93dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:text="Back"
            android:background="@drawable/gender_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>